# vk-gltf-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  impl.cpp  main.cpp  main.py  vcpkg-cgal.patch  vcpkg-configuration.json  vcpkg.json
.github/: linux.yml
.github/triplets/: x64-linux-clang.cmake
.github/workflows/: CMakeUserPresets.json  build.yml  clang-toolchain.cmake  linux.yml  macos.yml  windows.yml
ObjCBridge/: CMakeLists.txt
ObjCBridge/include/: ObjCBridge.h
ObjCBridge/interface/: mod.cppm
ObjCBridge/src/: ObjCBridge.mm
apple/: CMakeLists.txt
apple/src/: filesystem.cpp
asset/: brdf.ktx2  mod.cppm
asset/font/: fontawesome_webfont_ttf.cppm  mod.cppm
bloom/: CMakeLists.txt
bloom/interface/: BloomComputer.cppm  mod.cppm
bloom/shader/: bloom_downsample.comp  bloom_upsample.comp  downsample.comp  upsample.comp
brdfgen/: CMakeLists.txt  impl.cpp  main.cpp
brdfgen/shader/: brdfmap.comp
cmake/: CPM.cmake  CompileShader.cmake  MacOSXBundleInfo.plist.in  bin2mod.cpp  shader_module.cmake.in  variant_shader_module_impl.cmake.in  variant_shader_module_interface.cmake.in
cubemap/: CMakeLists.txt
cubemap/interface/: CubemapComputePipeline.cppm  CubemapComputer.cppm  SubgroupMipmapComputePipeline.cppm  SubgroupMipmapComputer.cppm  mod.cppm
cubemap/shader/: cubemap.comp  subgroup_mipmap.comp
docs/: performance-comparison.md
extlibs/: CMakeLists.txt  NMB.cppm  reflect.cppm  thread_pool.cppm
extlibs/include/: wuffs-unsupported-snapshot.c
extlibs/module-ports/: ImGuizmo.cppm  cstring_view.cppm  fastgltf.cppm  vku.cppm
extlibs/pbrenvmap/: CMakeLists.txt
extlibs/pbrenvmap/interface/: mod.cppm
extlibs/pbrenvmap/interface/details/: ranges.cppm
extlibs/pbrenvmap/interface/pipeline/: CubemapComputer.cppm  MultiplyComputer.cppm  PrefilteredmapComputer.cppm  SphericalHarmonicCoefficientsSumComputer.cppm  SphericalHarmonicsComputer.cppm  SubgroupMipmapComputer.cppm
extlibs/pbrenvmap/interface/pipelines/: CubemapComputer.cppm  MultiplyComputer.cppm  PrefilteredmapComputer.cppm  SphericalHarmonicCoefficientsSumComputer.cppm  SphericalHarmonicsComputer.cppm  SubgroupMipmapComputer.cppm
extlibs/vku/: CMakeLists.txt
extlibs/vku/extlibs/: vk_mem_alloc.cppm
extlibs/vku/interface/: commands.cppm  mod.cppm  scoped.cppm
extlibs/vku/interface/buffers/: AllocatedBuffer.cppm  Buffer.cppm  MappedBuffer.cppm  mod.cppm
extlibs/vku/interface/descriptors/: DescriptorSetLayouts.cppm  DescriptorSets.cppm  PoolSizes.cppm  mod.cppm
extlibs/vku/interface/details/: concepts.cppm  mod.cppm  nofield.cppm  ranges.cppm  type_traits.cppm
extlibs/vku/interface/gpu/: Gpu.cppm  mod.cppm
extlibs/vku/interface/images/: AllocatedImage.cppm  Image.cppm  mod.cppm
extlibs/vku/interface/pipelines/: Shader.cppm  mod.cppm
extlibs/vku/interface/rendering/: Attachment.cppm  AttachmentGroup.cppm  AttachmentGroupBase.cppm  MsaaAttachment.cppm  MsaaAttachmentGroup.cppm  mod.cppm
extlibs/vku/interface/utils/: RefHolder.cppm  mod.cppm
extlibs/vku/interface/wsi/: GlfwWindow.cppm  mod.cppm
geometry/: CMakeLists.txt  geometry.cppm
ibl/: CMakeLists.txt
ibl/include/: lifetimebound.hpp
ibl/interface/: BrdfmapRenderPipeline.cppm  BrdfmapRenderer.cppm  PrefilteredmapComputePipeline.cppm  PrefilteredmapComputer.cppm  SphericalHarmonicCoefficientComputePipeline.cppm  SphericalHarmonicCoefficientComputer.cppm  mod.cppm
ibl/shader/: brdfmap.frag  cubemap.glsl  pbr.glsl  prefilteredmap.comp  screen_quad.vert  spherical_harmonic_coefficient_buffer_to_buffer.comp  spherical_harmonic_coefficient_image_to_buffer.comp
impl/: AppState.cpp  GlobalState.cpp  MainApp.cpp  mod.cpp
impl/control/: AppWindow.cpp  ImGui.cpp  ImGuiTaskCollector.cpp
impl/gltf/: AssetGpuBuffers.cpp  AssetResources.cpp  AssetSceneGpuBuffers.cpp  SceneResources.cpp
impl/helpers/: enum_to_string.cpp
impl/imgui/: TaskCollector.cpp
impl/vulkan/: Frame.cpp  Gpu.cpp  SharedData.cpp  attachment_groups.cpp
include/: enum_flags.hpp
interface/: AppState.cppm  GlobalState.cppm  MainApp.cppm  Renderer.cppm  asset.cppm  global.cppm  mipmap.cppm  mod.cppm
interface/control/: AppWindow.cppm  Camera.cppm  ImGui.cppm  ImGuiTaskCollector.cppm  Task.cppm  mod.cppm
interface/data_structure/: ImmutableRing.cppm
interface/gltf/: Animation.cppm  AssetExtended.cppm  AssetExternalBuffers.cppm  AssetGpuBuffers.cppm  AssetGpuFallbackTexture.cppm  (+22 more)
math/: CMakeLists.txt  math.cppm
metal-cpp/: CMakeLists.txt
metal-cpp/include/metal-cpp/: macros.hpp
metal-cpp/interface/: mod.cppm
metal-cpp/src/: impl.cpp
shaders/: alpha_masked_depth.frag  alpha_masked_depth.vert  alpha_masked_faceted_primitive.frag  alpha_masked_faceted_primitive.vert  alpha_masked_jump_flood_seed.frag  alpha_masked_jump_flood_seed.vert  alpha_masked_primitive.frag  alpha_masked_primitive.vert  blend_faceted_primitive.frag  blend_faceted_primitive.vert  blend_primitive.frag  blend_primitive.vert  blend_unlit_primitive.frag  bloom_apply.frag  branch.glsl  brdfmap.comp  compile.bat  compile.sh  cubemap.comp  cubemap.glsl  cubemap_tone_mapping.frag  depth.frag  depth.vert  dequantization.glsl  dequantize.glsl  faceted_primitive.frag  faceted_primitive.tesc  faceted_primitive.tese  faceted_primitive.vert  grid.frag  grid.vert  indexing.glsl  inverse_tone_mapping.frag  jump_flood.comp  jump_flood_seed.frag  jump_flood_seed.vert  mask_depth.frag  mask_depth.vert  mask_faceted_primitive.frag  mask_jump_flood_seed.frag  (+46 more)
triplets/: x64-linux-clang.cmake
vkgltf/: CMakeLists.txt  CombinedIndexBuffer.cppm  PrimitiveAttributeBuffers.cppm  vkgltf.cppm
vkgltf/include/: alignment.hpp  lifetimebound.hpp
vkgltf/module/: CombinedIndexBuffer.cppm  Image.cppm  PrimitiveAttributeBuffers.cppm  StagingBufferStorage.cppm  mikktspace.cppm  mod.cppm  sampler.cppm
vkgltf/module/bindless/: NodeBuffer.cppm  PrimitiveBuffer.cppm  SkinBuffer.cppm  mod.cppm
vkgltf/module/bindless/shader_type/: Accessor.cppm  Node.cppm  Primitive.cppm
vkgltf/module/util/: mod.cppm
vku/: CMakeLists.txt
vku/include/: vku.hpp
vku/module/: vku.cppm
(+478 files in other folders)
